<resources>
    <string name="app_name">YesDSApp</string>

    <!-- Strings used for top app bar menu -->
    <string name="action_make_call">Сделать звонок</string>
    <string name="action_notifications">Уведомления</string>

    <!-- Strings used for fragments for navigation drawer -->
    <string name="main_page_fragment_label">Главная</string>
    <string name="about_fragment_label">О студии</string>
    <string name="styles_fragment_label">Направления</string>
    <string name="teachers_fragment_label">Преподаватели</string>
    <string name="teacher_detail_fragment_label">Преподаватель</string>
    <string name="timetable_fragment_label">Расписание</string>
    <string name="prices_fragment_label">Цены</string>
    <string name="contacts_fragment_label">Контакты</string>
    <string name="profile_fragment_label">Личный кабинет</string>
    <string name="call_studio_fragment_label">Позвонить в студию</string>
    <string name="messages_fragment_label">Уведомления</string>
    <string name="login_fragment_label">Вход</string>

    <!-- Strings used for fragments for bottom navigation -->
    <string name="profile_fragment_label_bottom">Профиль</string>
    <string name="membership_fragment_label_bottom">Абонемент</string>

    <!-- Strings used for main page fragment -->
    <string name="first_training_msg_1">Первое занятие БЕСПЛАТНО!</string>
    <string name="first_training_msg_2">При первом посещении Студии</string>
    <string name="question_msg">Есть вопрос? Напиши нам.</string>

    <!-- Strings used for about fragment -->
    <string name="about_text">Обучение танцам сегодня – это не только модное веяние и последняя тенденция светского досуга, это стиль жизни и любимое занятие для множества людей в России и других странах. Уроки танцев для детей стали частью классического образования, а для взрослых – признаком хорошего тона. Без танцевального наполнения не обходится ни одно значимое торжество, будь то Бал, светский раут или юбилей, а уроки свадебного танца для молодоженов вошли
в обязательную программу подготовки к торжеству.</string>

    <!-- Strings used for profile fragment -->
    <string name="btn_logout_text">Выход</string>

    <!-- Strings used for login fragment -->
    <string name="login_text">Вход</string>
    <string name="et_login_label">Номер телефона</string>
    <string name="et_password_label">Пароль</string>
    <string name="btn_auth_text">ВОЙТИ</string>
    <string name="msg_empty_auth">Введите имя пользователя и пароль</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
    </string>
</resources>