<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mainPageFragment"
        android:icon="@drawable/icon_bottomnav_main"
        android:title="@string/main_page_fragment_label" />
    <item
        android:id="@+id/membershipFragment"
        android:icon="@drawable/icon_bottomnav_membership"
        android:title="@string/membership_fragment_label_bottom" />
    <item
        android:id="@+id/timetableFragment"
        android:icon="@drawable/icon_bottomnav_timetable"
        android:title="@string/timetable_fragment_label" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/icon_bottomnav_profile"
        android:title="@string/profile_fragment_label_bottom" />
</menu>